--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "caption-quest",
-  "private": true,
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
     "vite": "^5.0.0"
   }
 }
