--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -14,7 +14,8 @@ jobs:
   deploy:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
-    permissions: { contents: read }
+    permissions:
+      contents: read        # <- fixed style
     steps:
       - uses: actions/checkout@v4
 
@@ -23,7 +24,8 @@ jobs:
           if [ -n "${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}" ]; then echo SET; else echo MISSING; exit 1; fi
 
       - name: Token length + hash (no leak)
-        env: { SWA_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }} }
+        env:
+          SWA_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         run: |
           echo "len=${#SWA_TOKEN}"
           python3 - << 'PY'
@@ -39,4 +41,4 @@ PY
           action: upload
           app_location: "/"
           skip_app_build: true
-          skip_api_build: true
+          skip_api_build: true   # remove if you actually want to build caption-func
