--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -2,9 +2,11 @@ name: Azure Static Web Apps CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 concurrency:
   group: swa-${{ github.ref }}
@@ -15,30 +17,23 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     permissions:
-      contents: read        # <- fixed style
+      contents: read
     steps:
       - uses: actions/checkout@v4
 
       - name: Check SWA token presence
         run: |
-          if [ -n "${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}" ]; then echo SET; else echo MISSING; exit 1; fi
-
-      - name: Token length + hash (no leak)
-        env:
-          SWA_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-        run: |
-          echo "len=${#SWA_TOKEN}"
-          python3 - << 'PY'
-import os,hashlib
-t=os.environ['SWA_TOKEN'].encode()
-print("sha256="+hashlib.sha256(t).hexdigest())
-PY
+          if [ -n "${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}" ]; then
+            echo "SET"
+          else
+            echo "MISSING"; exit 1
+          fi
 
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           action: upload
-          app_location: "/"
+          app_location: /
           skip_app_build: true
-          skip_api_build: true   # remove if you actually want to build caption-func
+          skip_api_build: true
