--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -35,5 +35,7 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           action: upload
           app_location: /
-          skip_app_build: true
-          skip_api_build: true   # remove this and add api_location: caption-func when your Functions app is ready
+          api_location: "caption-func"
+          output_location: ""
+          
+
