--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -5,37 +5,39 @@ on:
     branches:
       - main
   pull_request:
+    types: [opened, synchronize, reopened, closed]
     branches:
       - main
 
-concurrency:
-  group: swa-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
-  deploy:
-    if: github.event_name == 'push'   # don't deploy on PRs (secrets won't flow from forks)
+  build_and_deploy_job:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
+    name: Build and Deploy Job
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Token present?
-        run: |
-          if [ -n "${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}" ]; then
-            echo SET
-          else
-            echo MISSING; exit 1
-          fi
-
-      - name: Deploy to Azure Static Web Apps
+      - name: Build And Deploy
+        id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          action: upload
-          app_location: /
-          api_location: "caption-func"
-          output_location: ""
-          
+          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for GitHub integrations
+          action: "upload"
+          ###### Repository/Build Configurations ######
+          app_location: "/"             # Where index.html is
+          api_location: "caption-func"  # Your function folder
+          output_location: ""           # Not needed (plain HTML)
+          ###### End of Configurations ######
 
+  close_pull_request_job:
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    runs-on: ubuntu-latest
+    name: Close Pull Request Job
+    steps:
+      - name: Close Pull Request
+        id: closepullrequest
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          action: "close"
